recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:6: error: ')' expected but '}' found.
}
^